# logger

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  tb.code-discipline.ts  tsconfig.build.json  tsconfig.json
.github/workflows/: publish-package.yml
bench/: logger_bench.ts
examples/: dummy.ts
native/: .gitignore  .npmignore
native/logger-native/: Cargo.toml
native/logger-native/src/: archive.rs  common.rs  config.rs  lib.rs  log_files.rs  rewrite.rs  scan.rs
scripts/: build-native-matrix.mjs  build-native.mjs  native-targets.mjs  prepare-dist.mjs  verify-pack.mjs  verify-publish.mjs
src/: constants.ts  groups.ts  index.ts  types.ts
src/browser/: console_transport.ts  create_log.ts  index.ts  react.ts
src/config/: console_visibility.ts
src/core/: create_log.ts  shared.ts
src/core/create_log/: api.ts  finalize.ts  runtime.ts
src/format/: console.ts  options.ts
src/levels/: index.ts
src/metadata/: process.ts
src/middleware/: request.ts
src/storage/: export.ts  names.ts  options.ts  partitions.ts  query.ts  retention.ts  walk.ts  write.ts
src/storage/backend/: js.ts  (+3 more)
src/stream/: index.ts
src/types/: browser.ts  common.ts  export.ts  index.ts  partitions.ts  query.ts  server.ts
src/utils/: datetime.ts  runtime.ts  size.ts  values.ts
test/: browser.spec.ts  browser_react.spec.ts  index.spec.ts  partition_lifecycle.spec.ts
test/specs/: advanced.spec.ts  console_visibility.spec.ts  export.spec.ts  helpers.ts  native_loader.spec.ts  partition_core.spec.ts  partition_ops.spec.ts  runtime.spec.ts  time_retention.spec.ts
(+12 files in other folders)
