[package]
name = "logger_native"
version = "2.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1"
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
napi-build = "2"
